<resources>
    <string name="app_name">自贸区用电</string>
    <string name="history">历史记录</string>
    <string name="notices_detail">通知详情</string>
    <string name="splash_name">精准推送</string>
    <string name="login_email">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_reg">注册</string>
    <string name="login_forget">忘记密码 ?</string>
    <string name="login_ok">登录</string>
    <string name="tab_notices">通知</string>
    <string name="tab_caring">贴士</string>
    <string name="isread">已读列表</string>
    <string name="unread">未读列表</string>
    <string name="tab_setting">设置</string>
    <string name="tab_tips">互动</string>
    <string name="suggestion">投诉</string>
    <string name="propose">建议</string>
    <string name="propose_a"> 亲爱的用户：\n  \t\t您好，如果你在使用上遇到什么问题，或者对我们建议，请您通过以下方式与我们联系，我们将用心倾听不断优化为您提供更优质的服务</string>
    <string name="feedback_content_hint">请在这里填写您的建议</string>
    <string name="submit">提  交</string>
    <string name="suggest">您的意见：</string>
    <string name="ed_suggest">请输入您的投诉意见，以帮助我们更好的改进服务</string>
    <!-- 上拉刷新，下来加载更多 -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
<string name="p2refresh_end_click_load_more">没有更多</string>
<string name="p2refresh_release_refresh">松开刷新</string>
<string name="p2refresh_pull_to_refresh">下拉刷新</string>
<string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
<string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
<string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
<string name="image_desc">图片</string>
<string name="feedback">互动</string>
<string name="regionalManager">客户经理</string>
    <string name="contact_us">联系我们</string>
<string name="deal_with">处      理</string>
<string name="undeal_with">未处理</string>
 <string name="processed" >已处理</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="dynamic_discuss_underscore">请文明发言，遵守“七条底线”</string>
    <string name="phone">电话呼叫</string>
    <string name="message">发送短信</string>
    <string name="contact_search">搜索</string>
    <string name="user_detail">客户详情</string>
    <string name="add_people">添加短信接收人</string>
    <string name="notice_analy">通知分析</string>
    <string name="caring_analy">贴士分析</string>
    <string name="tips_analy">互动分析</string>
    <string name="stuff_analy">客户分析</string>
    </resources>
