<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    >
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@drawable/suggext_edittext"
       >

       <RelativeLayout
           android:id="@+id/relative"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="40dp"
               android:layout_marginRight="25dp"
               android:layout_marginLeft="25dp"
               android:layout_marginTop="20dp"
               android:background="@drawable/suggext_edittext"
               android:id="@+id/phone">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/phone"
                   android:textSize="19dp"
                   android:textColor="@color/black"
                   android:layout_centerVertical="true"
                   android:layout_centerHorizontal="true" />
               </RelativeLayout>
           <RelativeLayout
               android:id="@+id/message"
               android:layout_width="match_parent"
               android:layout_below="@+id/phone"
               android:layout_alignParentLeft="true"
               android:layout_height="40dp"
               android:layout_marginRight="25dp"
               android:layout_marginLeft="25dp"
               android:layout_marginTop="10dp"
               android:background="@drawable/suggext_edittext"
               android:layout_alignParentStart="true">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/message"
                   android:textSize="19dp"
                   android:textColor="@color/black"
                   android:layout_centerVertical="true"
                   android:layout_centerHorizontal="true" />
           </RelativeLayout>
           <RelativeLayout
               android:id="@+id/pop_cancle"
               android:layout_width="match_parent"
               android:layout_below="@+id/message"
               android:layout_alignParentLeft="true"
               android:layout_height="40dp"
               android:layout_marginRight="25dp"
               android:layout_marginLeft="25dp"
               android:layout_marginTop="10dp"
               android:layout_marginBottom="10dp"
               android:background="@drawable/popuwindow"
               android:layout_alignParentStart="true">
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/cancle"
                   android:textSize="19dp"
                   android:textColor="@color/white"
                   android:layout_centerVertical="true"
                   android:layout_centerHorizontal="true" />
           </RelativeLayout>
           </RelativeLayout>
       </RelativeLayout>
</LinearLayout>
