<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >



    <RelativeLayout
        android:id="@+id/tip_screen"
        android:layout_width="match_parent"
        android:background="@color/electric_green"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:text="@string/suggestion"
            android:textColor="@color/white"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/plus"
            android:onClick="toggleMenu"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="41dp" />
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/sh"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </LinearLayout>
    <com.toc.dlpush.util.CustomLinerLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <com.toc.dlpush.view.CustomListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/suggest_list"
            android:background="@color/white"
            android:cacheColorHint="#00000000"
            android:fadingEdge="none"
            android:footerDividersEnabled="false"
            android:divider="@null"
            android:listSelector="#00000000"></com.toc.dlpush.view.CustomListView>
    </com.toc.dlpush.util.CustomLinerLayout>
        <LinearLayout
            android:id="@+id/new_main_two"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                >
                <Button
                    android:id="@+id/new_reply_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#22DEDEDE"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:background="@color/white"
                    android:paddingBottom="10dp"
                    >

                    <EditText
                        android:id="@+id/et_content"
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/news_edittext_bg"
                        android:gravity="left"
                        android:hint="@string/dynamic_discuss_underscore"
                        android:shadowColor="@color/black" >
                    </EditText>

                    <Button
                        android:id="@+id/publish_btn"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_alignRight="@+id/et_content"
                        android:layout_below="@+id/et_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/news_edittext_bg"
                        android:text="@string/ok"
                        android:textColor="@color/background"
                        android:clickable="false"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/cancel_btn"
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:layout_alignBaseline="@+id/publish_btn"
                        android:layout_alignBottom="@+id/publish_btn"
                        android:layout_alignLeft="@+id/et_content"
                        android:background="@drawable/news_edittext_bg"
                        android:text="@string/cancle"
                        android:textColor="@color/background"
                        android:textSize="15sp" />
                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>
   </FrameLayout>
</LinearLayout>
