<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/tip_screen"
        android:layout_width="match_parent"
        android:background="@color/electric_green"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="18dp"
            android:text="@string/tab_tips"
            android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/tips_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/point"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
             />
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/plus"
            android:onClick="toggleMenu"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="41dp"
            />
    </RelativeLayout>
 <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.toc.dlpush.view.TitleBarView
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <FrameLayout
            android:id="@+id/child_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title_bar"></FrameLayout>
        <!--<com.toc.dlpush.view.CustomListView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:id="@+id/suggest_list"-->
            <!--android:visibility="gone"-->
            <!--android:background="@color/white"-->
            <!--android:cacheColorHint="#00000000"-->
            <!--android:fadingEdge="none"-->
            <!--android:footerDividersEnabled="false"-->
            <!--android:divider="@null"-->
            <!--android:listSelector="#00000000"></com.toc.dlpush.view.CustomListView>-->
        </RelativeLayout>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/tips_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_transparent"
            android:visibility="gone"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/tips_other"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/tips_drop"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:layout_marginTop="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"

            android:background="@mipmap/ground"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:weightSum="3"
                >
                <RelativeLayout
                    android:id="@+id/feedback01"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        >
                        <ImageView
                            android:id="@+id/imageView01"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@mipmap/history"
                            android:layout_centerVertical="true"
                            />
                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:text="@string/history"
                            android:textColor="@color/black"
                            android:layout_toRightOf="@+id/imageView01"
                            />
                    </RelativeLayout>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/blackgary"></LinearLayout>
                <RelativeLayout
                    android:id="@+id/regional01"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        >
                        <ImageView
                            android:id="@+id/imageView02"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@mipmap/manager"
                            android:layout_centerVertical="true"
                            />
                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="3dp"
                            android:text="@string/regionalManager"
                            android:textColor="@color/black"
                            android:layout_marginLeft="10dp"
                            android:layout_toRightOf="@+id/imageView02"
                            />
                    </RelativeLayout>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/blackgary"></LinearLayout>
                <RelativeLayout
                    android:id="@+id/regional02"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        >
                        <ImageView
                            android:id="@+id/imageView03"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@mipmap/phone"
                            android:layout_centerVertical="true"
                             />
                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="3dp"
                            android:text="@string/contact_us"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/black"
                            android:layout_toRightOf="@+id/imageView03"
                             />
                        </RelativeLayout>
                </RelativeLayout>
                </LinearLayout>


        </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
     <LinearLayout
         android:id="@+id/pop_btn"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/semi_black"
         android:orientation="horizontal"
         android:visibility="gone"></LinearLayout>
    </FrameLayout>
</LinearLayout>
